add ability to minus flavor from box.